plugins {
    id 'com.github.johnrengelman.shadow' version '7.1.2'
    id 'java'
    id 'application'
}

group 'io.noties'
version '34'

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

mainClassName = 'io.noties.enhance.Enhance'

repositories {
    jcenter()
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.findbugs:jsr305:3.0.2'

    // https://github.com/javaparser/javaparser
    implementation 'com.github.javaparser:javaparser-core:3.25.4'

    // https://github.com/google/google-java-format
    implementation 'com.google.googlejavaformat:google-java-format:1.17.0'

    implementation 'commons-cli:commons-cli:1.4'
    implementation 'commons-io:commons-io:2.7'

    testImplementation 'junit:junit:4.13.1'
}

wrapper {
    gradleVersion '7.5.1'
    distributionType 'all'
}

afterEvaluate {
    final def folder = new File(rootDir, '/gen/io/noties/enhance')
    if (!folder.exists()) {
        folder.mkdirs()
    }
    final def file = new File(folder, 'EnhanceVersion.java')
    file.write("""
package io.noties.enhance;
class EnhanceVersion { static final String NAME = \"${version}\"; } 
    """)
}

sourceSets {
    main.java.srcDirs += new File(rootDir, 'gen')
}

compileJava {
    options.compilerArgs += '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
    options.compilerArgs += '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'
    options.compilerArgs += '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED'
    options.compilerArgs += '--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED'
    options.compilerArgs += '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'
    options.compilerArgs += '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
}
